# Sumatoria-de-RIemann

./: README.md
Riemann_2.0/: CMakeLists.txt  Dominio.cpp  Dominio.h  ExpressionParser.cpp  ExpressionParser.h  Graficadora.py  Utils.cpp  Utils.h  cutintegral.cpp  cutintegral.h  main.cpp  node.h  sustx.h  toPostFix.cpp  toPostFix.h
Riemann_2.0/datos/: Datos.json  Parametros.json  Rectangulo.json
